subgradient-lasso-fixing typo

--- a/ML-subgradient method for Lasso regression-elastic net.ipynb
+++ b/ML-subgradient method for Lasso regression-elastic net.ipynb
@@ -195,7 +195,7 @@
     "# and then normalizing each data column separately, except the last column\n",
     "ys=df['Outcome'].values\n",
     "df_xs=df.drop(['Outcome'],axis=1)\n",
-    "df_xs=(df_xs/df_xs.mean())/df_xs.std()\n",
+    "df_xs=(df_xs-df_xs.mean())/df_xs.std()\n",
     "Xs=df_xs.to_numpy()  #converting to a numpy array"
    ]
   },
@@ -242,9 +242,8 @@
      "output_type": "stream",
      "text": [
       "The estimated parameters:\n",
-      "[ 1.09292698e-01  3.45249043e-01 -3.90293917e-04  1.16692611e-04\n",
-      "  8.32653841e-04  4.49476219e-04  6.74219187e-04  4.76404023e-02\n",
-      "  9.17616944e-04]\n"
+      "[ 0.3420026   0.06483115  0.18184957 -0.03265791  0.00229541 -0.00719638\n",
+      "  0.09793499  0.04316883  0.02638846]\n"
      ]
     }
    ],
@@ -267,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy of the model for classification: 0.6888020833333334\n"
+      "The accuracy of the model for classification: 0.7721354166666666\n"
      ]
     }
    ],
