Voronoi diagram-typo

--- a/ML-Voronoi diagram-tessellation-for github.ipynb
+++ b/ML-Voronoi diagram-tessellation-for github.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Machine Learning\n",
     "## Voronoi diagram (tessellation)\n",
-    "We have a finite number of points called **seeds** in a *metric space* (a vector space with a distance function). Then, we can **partition** the space into disjoint regions called **Voronoi cells**. Specifically, a point of the space belongs to a seed if the point is closest to the seed than to any other seeds. The closeness is measured by the distance function of the metric space.\n",
+    "We have a finite number of points called **seeds** in a *metric space* (a vector space with a distance function). Then, we can **partition** the space into disjoint regions called **Voronoi cells**. Specifically, a point of the space belongs to a seed if the point is closer to the seed than to any other seeds. The closeness is measured by the distance function of the metric space.\n",
     "<br>**Contents:**\n",
     "- Defining the distance functions **Euclidean** and **Manhattan**.\n",
     "- Defining a function to generate random seeds, and then a function to create the Voronoi diagram.\n",
